# quality_tools_v3

./: .env.example  .gitignore  .pylintrc  =4.2.0  DEVELOPMENT_SETUP.md  Dockerfile  Procfile  README.md  asgi.py  check_migrations.py  clean_accounts_migrations.py  clean_migrations.py  clean_restart.py  collectstatic.py  context_processors.py  copilot-instructions-en.md  create_directory_structure.bat  create_dirs.py  create_locale_dirs.bat  create_superuser.py  delete_migrations.py  docker-compose.yml  drop_contenttypes.py  example_usage.py  fake_initial_migrations.py  file_monitor.py  files_to_delete.md  fix_contenttype_table.py  fix_contenttypes.py  fix_equipment_migrations.py  fix_migration_history.py  fix_migrations.py  git_utils.py  inventory_cleanup.py  inventory_report.txt  manage.py  package-lock.json  package.json  project_files.txt  pyproject.toml  (+19 more)
.github/: copilot-instructions.md
accounts/: admin.py  admin_registry.py  apps.py  custom_admin.py  models.py  tests.py  urls.py
audits/: models.py
company/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  debug_views.py  settings.py  urls.py  wsgi.py
core/: admin.py  context_processors.py
dashboard/: __init__.py  apps.py  urls.py  views.py
docs/: debugging_guidelines.md
equipment/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  translation_terms.py  urls.py  views.py
locale/: README.md
media/: fd44f56c-6606-40ce-a94e-b838173b086f.prof
methods/: __init__.py  admin.py  forms.py  urls.py
models/: equipment.py
myproject/: admin.py  asgi.py  context_processors.py  settings.py  tests.py  urls.py  views.py  wsgi.py
personnel/: admin.py  apps.py  forms.py  models.py  (+2 more)
(+684 files in other folders)
