[tool.poetry]
name = "quality_tools_v3"
version = "0.1.0"
description = "Quality Tools multi-app Django projekts"
authors = ["Vārds Uzvārds <tavs@epasts>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-crispy-forms = "*"
crispy-bootstrap4 = "*"
django-mptt = "*"
django-rosetta = "*"
django-simple-history = "*"
python-decouple = "^3.5"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
# Zemāk var iekļaut tavu lint/formatter konfigurāciju, ja nepieciešams       #
###############################################################################

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DJ", "PIE", "T20", "RUF"]
ignore = [
    "E501",   # Line too long (handled by Black)
    "DJ001",  # Avoid using `null=True` on str fields
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG",
           "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC",
           "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF",
           "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
exclude = [
    ".git", ".hg", ".svn", ".tox", ".venv", "build", "dist", "node_modules",
    "__pypackages__", "migrations"
]
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
